--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   db:
-    image: mysql:8.0
+    image: mysql:8.4
     container_name: mysql-db
     restart: unless-stopped
 
@@ -11,23 +11,33 @@ services:
 
     environment:
       MYSQL_ROOT_PASSWORD: mypassword
-      MYSQL_DATABASE: ecom-api
+      MYSQL_DATABASE: ecom_api
       MYSQL_USER: appuser
       MYSQL_PASSWORD: apppassword
+      MYSQL_ROOT_HOST: "%"
 
     volumes:
       - db_data:/var/lib/mysql
 
-    command: >
-      --default-authentication-plugin=mysql_native_password
-      --character-set-server=utf8mb4
-      --collation-server=utf8mb4_unicode_ci
+    command:
+      - --default-authentication-plugin=mysql_native_password
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
+      - --sql-mode=STRICT_TRANS_TABLES,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION
+      - --innodb-buffer-pool-size=256M
+      - --innodb-log-file-size=64M
+      - --max-connections=300
 
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      test:
+        [
+          "CMD-SHELL",
+          "mysqladmin ping -h localhost -u root -p$$MYSQL_ROOT_PASSWORD",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
+      start_period: 30s
 
 volumes:
   db_data:
